Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,59 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Megan Plevel - Things I like to do</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header>
+         <h1>Hobbies</h1>
+      </header>
+      <main>
+         <article>
+            <section>
+               <h2>Scuba</h2>
+               <p>
+                  "I started diving in 2016 when I took Mizzou's Scuba class. It has been one of the most influential parts of my life as it has given me some of the best experiences and friendships in my life. It exposes you to an entire second world underwater and gives you the opportunity to see nature with an entirely new prospective. I encourage anyone who has an interest to try Scuba."
+               </p>
+               <figure>
+                  <img src="images/scuba.jpg" alt="Diving in Cozumel">
+                  <figcaption>Diving in Cozumel</figcaption>
+               </figure>
+            </section>
+            <section>
+               <h2>Rock Climbing</h2>
+               <p>
+                  "I've been rock climbing for about 2 years on and off since the pandemic. I recently attempted outdoor climbing and have been a bit obsessed with that ever since. It’s a new hobby but the community is welcoming and promotes growth."
+               </p>
+               <figure>
+                  <img src="images/climb.jpg" alt="Random gym">
+                  <figcaption>Random gym</figcaption>
+               </figure>
+            </section>
+            <section>
+               <h2>Skiing</h2>
+               <p>
+                  "I enjoy skiing in the Winter and I take at least one ski trip every year. This year I am going to try snowboarding for the first time and hopefully I can add that to my list of hobbies as well if I don’t die. I’m coordinated but I know it’s harder to learn."
+               </p>
+               <figure>
+                  <img src="images/ski.jpg" alt="Skiing in Vail">
+                  <figcaption>Skiing in Vail</figcaption>
+               </figure>
+            </section>
+            <section>
+               <h2>Traveling</h2>
+               <p>
+                  "Traveling can also be considered a hobby as I do it a lot more than some of my other hobbies I have listed. I plan on going to Colorado, Hawaii, Utah, Atlanta, and Miami again within the next few months. I think it is important to travel and to make it a part of work life balance."
+               </p>
+               <figure>
+                  <img src="images/travel.jpg" alt="Hilton head">
+                  <figcaption>Hilton Head sunrise</figcaption>
+               </figure>
+            </section>
+         </article>
+      </main>
+      <footer>
+         <p>&copy; 2022 Megan Plevel</p>
+      </footer>
    </body>
 </html>
