--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+   <link rel="stylesheet" href="styles.css">
+   
    <head>
       <title>Megan Plevel - Things I like to do</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
-      <header>
+      <header id = "mainHeading">
          <h1>Hobbies</h1>
       </header>
       <main>
          <article>
             <section>
                <h2>Scuba</h2>
-               <p>
+               <p id="testP" class = "funParagraph">
                   "I started diving in 2016 when I took Mizzou's Scuba class. It has been one of the most influential parts of my life as it has given me some of the best experiences and friendships in my life. It exposes you to an entire second world underwater and gives you the opportunity to see nature with an entirely new prospective. I encourage anyone who has an interest to try Scuba."
                </p>
                <figure>
